[fix] footer下部固定をindex.html以外にも適用

--- a/public/policy.html
+++ b/public/policy.html
@@ -9,7 +9,7 @@
     <link href="css/common.css" rel="stylesheet"/>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   </head>
-  <body>
+  <body id="body">
     <header>
       <nav>
 	<div class="ui blue right sidebar inverted vertical menu">
@@ -45,7 +45,7 @@
 	</div>
       </nav>
     </header>
-    <main>
+    <main id="main">
       <div class="pusher">
 	<div class="ui text container main">
 	  <h2 class="ui header">プライバシーポリシー</h2>
