[add] 関連記事を表示

--- a/public/radio_detail.html
+++ b/public/radio_detail.html
@@ -47,7 +47,7 @@
     </header>
     <main id="main">
       <div class="pusher">
-	<div class="ui text container main">
+	<div class="main">
 	  <article>
 	    <h2 class="ui header">#1 呉高専ってなに〜？</h2>
 	    <p>ちょっくれについて、呉高専クイズ、広まちギャラリー、くれまる、デ・ステイルなどの話をしました。</p>
@@ -62,8 +62,68 @@
 	    </ul>
 	    <audio controls="controls" src="https://cho-kure-staging.s3.amazonaws.com/uploads/radio/mp3/1/sample.mp3"></audio>
 	  </article>
+	  <div class="ui text container news-contents">
+	    <h3 class="ui header">関連記事</h3>
+	    <div class="ui items">
+	      <div class="item radio">
+		<a class="image" href="https://google.com">
+		  <img src="https://placehold.jp/640x480.png">
+		</a>
+		<div class="content">
+		  <a href="https://google.com" class="header">#1 呉高専ってなに〜？</a>
+		  <div class="description">
+		    <p>第1回となる、この放送。パーソナリティ 4 人による特別版。 高専生必聴の呉高専クイズあり。 ちょっくれの伝説がここから始まる!</p>
+		  </div>
+		  <div class="meta">
+		    <span class="date">2017/12/03 1:08</span>
+		  </div>
+		</div>
+	      </div>
+	      <div class="item community">
+		<a class="image" href="https://google.com">
+		  <img src="https://placehold.jp/640x480.png">
+		</a>
+		<div class="content">
+		  <a href="https://google.com" class="header">#1 呉高専ってなに〜？</a>
+		  <div class="description">
+		    <p>第1回となる、この放送。パーソナリティ 4 人による特別版。 高専生必聴の呉高専クイズあり。 ちょっくれの伝説がここから始まる!</p>
+		  </div>
+		  <div class="meta">
+		    <span class="date">2017/12/03 1:08</span>
+		  </div>
+		</div>
+	      </div>
+	      <div class="item news">
+		<a class="image" href="https://google.com">
+		  <img src="https://placehold.jp/640x480.png">
+		</a>
+		<div class="content">
+		  <a href="https://google.com" class="header">#1 呉高専ってなに〜？</a>
+		  <div class="description">
+		    <p>第1回となる、この放送。パーソナリティ 4 人による特別版。 高専生必聴の呉高専クイズあり。 ちょっくれの伝説がここから始まる!</p>
+		  </div>
+		  <div class="meta">
+		    <span class="date">2017/12/03 1:08</span>
+		  </div>
+		</div>
+	      </div>
+	      <div class="item other">
+		<a class="image" href="https://google.com">
+		  <img src="https://placehold.jp/640x480.png">
+		</a>
+		<div class="content">
+		  <a href="https://google.com" class="header">#1 呉高専ってなに〜？</a>
+		  <div class="description">
+		    <p>第1回となる、この放送。パーソナリティ 4 人による特別版。 高専生必聴の呉高専クイズあり。 ちょっくれの伝説がここから始まる!</p>
+		  </div>
+		  <div class="meta">
+		    <span class="date">2017/12/03 1:08</span>
+		  </div>
+		</div>
+	      </div>
+	    </div>
+	  </div>
 	</div>
-      </div>
     </main>
     <footer>
       <div class="ui black center aligned segment">
