[fix] articleにcontainerクラスを追加

--- a/public/radio_detail.html
+++ b/public/radio_detail.html
@@ -48,7 +48,7 @@
     <main id="main">
       <div class="pusher">
 	<div class="main">
-	  <article>
+	  <article class="ui text container">
 	    <h2 class="ui header">#1 呉高専ってなに〜？</h2>
 	    <p>ちょっくれについて、呉高専クイズ、広まちギャラリー、くれまる、デ・ステイルなどの話をしました。</p>
 	    <p>紹介した高専日誌</p>
