[fix] 関連記事をその他の記事にする

--- a/public/radio_detail.html
+++ b/public/radio_detail.html
@@ -63,7 +63,7 @@
 	    <audio controls="controls" src="https://cho-kure-staging.s3.amazonaws.com/uploads/radio/mp3/1/sample.mp3"></audio>
 	  </article>
 	  <div class="ui text container news-contents">
-	    <h3 class="ui header">関連記事</h3>
+	    <h3 class="ui header">その他の記事</h3>
 	    <div class="ui items">
 	      <div class="item radio">
 		<a class="image" href="https://google.com">
