--- a/frontend/static/top.html
+++ b/frontend/static/top.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="ja">
   <head>
+    <link href="css/reset.css" rel="stylesheet"/>
     <link href="css/custom.css" rel="stylesheet"/>
     <script src="https://use.typekit.net/pws6ptb.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
@@ -45,24 +46,41 @@
         </nav>
       </div>
     </header>
-    <div class="container">
-      <div class="row">
-        <div class="column">.column</div>
-        <div class="column">.column</div>
-        <div class="column">.column</div>
-        <div class="column">.column</div>
-      </div>
-      <div class="row">
-        <div class="column">.column</div>
-        <div class="column">
-          <div class="row">
-            <div class="column">.column</div>
-            <div class="column">.column</div>
-            <div class="column">.column</div>
-          </div>
+    <main>
+      <div class="hero">
+        <div class="hero-form">
+          <form>
+            <fieldset>
+              <label for="whatRadio">どんなこと</label>
+              <select placeholder="どんなこと" id="whatRadio">
+                <option value='' disabled selected style='display:none;'>どんなこと</option>
+                <option value="0">0</option>
+                <option value="1">1</option>
+                <option value="2">1</option>
+                <option value="3">2</option>
+              </select>
+              <label for="whoRadio">だれが</label>
+              <select placeholder="だれが" id="whoRadio">
+                <option value='' disabled selected style='display:none;'>だれが</option>
+                <option value="0">0</option>
+                <option value="1">1</option>
+                <option value="2">1</option>
+                <option value="3">2</option>
+              </select>
+              <input class="button-primary" type="submit" value="search">
+            </fieldset>
+          </form>
         </div>
       </div>
-    </div>
+      <div class="container">
+        <div class="row">
+          <div class="column">.column</div>
+          <div class="column">.column</div>
+          <div class="column">.column</div>
+          <div class="column">.column</div>
+        </div>
+      </div>
+    </main>
     <h1>hoge</h1>
     <p>fuga</p>
   </body>
